--- a/src/app/landing-page/sign-up/sign-up.component.scss
+++ b/src/app/landing-page/sign-up/sign-up.component.scss
@@ -8,6 +8,12 @@
 	margin-top:30px;
 	margin-bottom:30px;
 }
+.typeText{
+	font-size: 	larger;
+}
+.subText{
+	font-size: 	smaller;
+}
 .rightColumn{
 	min-width:300px;
 }
