--- a/src/app/project/executive/timeline/timeline-popover/timeline-popover.component.html
+++ b/src/app/project/executive/timeline/timeline-popover/timeline-popover.component.html
@@ -1,51 +1,55 @@
-<ion-content class="">
+<ion-content class=""   [ngClass]="{'main': timelineElement.static.data.type === 'main'}" [style.--background]="'url(' + timelineElement.static.data.backgroundPictureUrl + ') no-repeat center center / cover var(--ion-color-primary)'  ">
 	<div class="header ion-padding">
 		<ion-item lines="none" class="closeItem">
 			<ion-icon slot="end" name="close-outline" class="pointer" (click)="dismiss()"></ion-icon>
 		</ion-item>
-		<h1>{{timelineElement.static.data.stage}} - {{timelineElement.static.data.title}}</h1>
+		<h1>{{timelineElement.static.data.title}}</h1>
 	</div>
-	<div class="ion-padding">
+	<div class="ion-padding" *ngIf="timelineElement.static.data.type === 'item'" >
 		<ion-item>
 			<ion-label>{{'TIMELINE.Status' | translate }} </ion-label>
-			<ion-select *ngIf="accessRights.write === true"
-			[(ngModel)]="timelineElement.timelineElement.data.status" cancelText="Dismiss" (ionChange)="saveTimelineElement()">
-			<ion-select-option value="ongoing">{{'TIMELINE.StatusOnGoing' | translate }}</ion-select-option>
-			<ion-select-option value="done">{{'TIMELINE.StatusDone' | translate }}</ion-select-option>
-			<ion-select-option value="todo">{{'TIMELINE.StatusTodo' | translate }}</ion-select-option>
-		</ion-select>
-		<ion-text ion-select *ngIf="accessRights.write === false">{{timelineElement.timelineElement.data.status}}</ion-text>
+			<ion-select *ngIf="accessRights.write === true"			[(ngModel)]="timelineElement.timelineElement.data.status" cancelText="Dismiss" (ionChange)="saveTimelineElement()">
+				<ion-select-option value="ongoing">{{'TIMELINE.StatusOnGoing' | translate }}</ion-select-option>
+				<ion-select-option value="done">{{'TIMELINE.StatusDone' | translate }}</ion-select-option>
+				<ion-select-option value="todo">{{'TIMELINE.StatusTodo' | translate }}</ion-select-option>
+			</ion-select>
+			<ion-text ion-select *ngIf="accessRights.write === false">{{timelineElement.timelineElement.data.status}}</ion-text>
 
-	</ion-item>
-	<h2><ion-icon name="information-circle-outline" class="ion-margin-end"></ion-icon>{{'TIMELINE.ItemDescription' | translate }}</h2>
+		</ion-item>
+		<h2><ion-icon name="information-circle-outline" class="ion-margin-end"></ion-icon>{{'TIMELINE.ItemDescription' | translate }}</h2>
 
-	<div [innerHTML]="timelineElement.static.data.description" class="block"></div>
+		<div [innerHTML]="timelineElement.static.data.description" class="block"></div>
 
-	
-	<div class="item ion-margin-top"> 
-		<h2><ion-icon name="open-outline" class="ion-margin-end"></ion-icon>{{'TIMELINE.ItemDelivrable' | translate }}</h2>
-		<div  class="block" >
-			<ul>
-				<li *ngFor="let element of delivrable">
-					<div *ngIf="element.link === ''">{{element.title}}</div>
-					<div *ngIf="element.link !== ''">
-						<a class="element" [href]="element.link" target="_blank" *ngIf="element.type ==='web'">{{element.title}}</a>
-						<a  class="element" *ngIf="element.type ==='ES'"  [routerLink]="['/project/'+projectId]" (click)="dismiss()">{{element.title}}</a>
-					</div>
-				</li>
-			</ul>
 
-		</div>
-	</div>
-
-	<div class="item ion-margin-top toolsWrapper">
-		<h1><ion-icon name="grid-outline" class="ion-margin-end"></ion-icon>{{'TIMELINE.ItemApplications' | translate }} </h1>
-		<div class="block tools">
-			<div *ngFor="let tool of tools">
-				<a [href]="tool.link" target="_blank" class="tool"> {{tool.name}}</a>
+		<div class="item ion-margin-top"> 
+			<h2><ion-icon name="open-outline" class="ion-margin-end"></ion-icon>{{'TIMELINE.ItemDelivrable' | translate }}</h2>
+			<div  class="block" >
+				<ul>
+					<li *ngFor="let element of delivrable">
+						<div *ngIf="element.link === ''">{{element.title}}</div>
+						<div *ngIf="element.link !== ''">
+							<span >{{element.title}}</span>
+							<a class="delivrable" [href]="element.link" target="_blank" *ngIf="element.type ==='web'">{{element.linkText}}</a>
+							<a  class="delivrable" *ngIf="element.type ==='ES'"  [routerLink]="['/project/'+projectId]">{{element.linkText}}</a>
+						</div>
+					</li>
+				</ul>
 			</div>
 		</div>
 
+		<div class="item ion-margin-top toolsWrapper">
+			<h1><ion-icon name="grid-outline" class="ion-margin-end"></ion-icon>{{'TIMELINE.ItemApplications' | translate }} </h1>
+			<div class="block tools ">
+				<div *ngFor="let tool of tools">
+					<a [href]="tool.link" target="_blank" class="tool"> {{tool.name}}</a>
+				</div>
+			</div>
+
+		</div>
 	</div>
-</div>
+
+	<div class="mainContent" *ngIf="timelineElement.static.data.type === 'main'"   >
+
+		<div [innerHTML]="timelineElement.static.data.description" class="block ion-padding"></div>
+	</div>
 </ion-content>
