--- a/src/app/project/executive/timeline/timeline.page.scss
+++ b/src/app/project/executive/timeline/timeline.page.scss
@@ -80,12 +80,14 @@
 	right:-12px;
 	z-index: 12;
 	ion-card-header{
-		--background: var(--ion-color-primary-tint);
+		border-radius: 4px;
+		--background: rgba(0, 0, 0, 0.2);
 		color: var(--ion-color-primary-contrast);
 	}
 	ion-card-content{
-	
-		max-height: -webkit-fill-available;
+		background: rgba(0, 0, 0, 0.2);
+		min-height: calc(100% - 100px);
+		color: var(--ion-color-primary-contrast);
 	}
 	.block{
 		padding:5px;
@@ -94,7 +96,7 @@
 		border-radius: 3px;
 	}
 	.toolsWrapper{
-		height: inherit;
+		height: auto;
 	}
 	.tools{
 		height: auto;
@@ -105,7 +107,20 @@
 		color:var(--ion-color-primary-contrast);
 	}
 }
+.main{
+	ion-card-header{
+		--background: rgba(0, 0, 0, 0.2);
+		color: var(--ion-color-primary-contrast);
+	}
+	ion-card-content{
 
+		background: rgba(0, 0, 0, 0.2);
+		color: var(--ion-color-primary-contrast);
+		height: calc(100% - 100px);
+	}
+
+
+}
 .notActive{
 	right:-500px;
 }
