--- a/src/app/landing-page/landing-page.page.html
+++ b/src/app/landing-page/landing-page.page.html
@@ -14,161 +14,195 @@
 			</ion-row>
 		</ion-grid>
 	</div>
-	<div class="subContent ion-padding" >
-		<ion-card class="subContentCard">
-			<ion-card-content>
-				<div >
-					<h1 class="subContentTitle ion-padding ion-text-center" >{{'LANDINGPAGE.subContentTitle1' | translate}}</h1>
-					<div class="timelinePictureWrapper">
-						<img src="assets/images/journey.png" class="ion-margin timelinePicture ion-hide-md-down">
-						<img src="assets/images/journey_mobile.png" class="ion-margin timelinePicture ion-hide-md-up">
-					</div>
-					<ion-grid class="subContentGrid ">
-						<ion-row>
-							<ion-col>
-								<div class="parent">
-									<div class="child sub1"  *ngIf="isLogged ===false" (click)="presentSignUpPopover()">
-										<ion-button class="actionButton" fill="outline">{{'LANDINGPAGE.Icon1SubTitle' | translate}}
-										</ion-button>
-									</div>
-									<div class="child sub1"  *ngIf="isLogged ===true" [routerLink]="['/entrepreneur']">
-										<ion-button  class="actionButton"  fill="outline">{{'LANDINGPAGE.GarageAccess' | translate}}
-										</ion-button>
-									</div>
+	<div class="subContent" >
+		
+		<div >
+			<h1 class="subContentTitle ion-padding ion-text-center headerTitle" >
+				<span>{{'LANDINGPAGE.subContentTitle1Text1' | translate}}</span>
+				<span class="underline">{{'LANDINGPAGE.subContentTitle1Text2' | translate}}</span>
+				<span>{{'LANDINGPAGE.subContentTitle1Text3' | translate}}</span>
+				<span class="underline">{{'LANDINGPAGE.subContentTitle1Text4' | translate}}</span>
+				<span>{{'LANDINGPAGE.subContentTitle1Text5' | translate}}</span>
+			</h1>
+		</div>
+
+		<div>
+			<div class="timelinePictureWrapper cssTimeline">
+				<app-timeline></app-timeline>
+			</div>
+
+			<ion-grid class="subContentGrid ">
+				<ion-row>
+					<ion-col>
+						<div class="parent">
+							<div class="child sub1"  *ngIf="isLogged ===false" (click)="presentSignUpPopover()">
+								<ion-button class="actionButton" fill="outline">{{'LANDINGPAGE.Icon1SubTitle' | translate}}
+								</ion-button>
+							</div>
+							<div class="child sub1"  *ngIf="isLogged ===true" [routerLink]="['/entrepreneur']">
+								<ion-button  class="actionButton"  fill="outline">{{'LANDINGPAGE.GarageAccess' | translate}}
+								</ion-button>
+							</div>
+						</div>
+						<div>
+							<p class="ion-text-justify">{{'LANDINGPAGE.Icon1SubText' | translate}}</p>
+						</div>
+
+					</ion-col>
+					<ion-col>
+						<div class="parent">
+							<div class="child sub2" >
+								<div class="child sub2"   [routerLink]="['/tools']">
+									<ion-button class="actionButton" fill="outline">{{'LANDINGPAGE.Icon2SubTitle' | translate}}
+									</ion-button>
 								</div>
-								<div>
-									<p class="ion-text-justify">{{'LANDINGPAGE.Icon1SubText' | translate}}</p>
+
+							</div>
+						</div>
+						<div>
+							<p class="ion-text-justify">{{'LANDINGPAGE.Icon2SubText' | translate}}</p>
+						</div>
+					</ion-col>
+					<ion-col >								
+						<a href="https://www.facebook.com/entrepreneurstudiocom" target="_blank">
+							<div class="parent">
+								<div class="child sub3" >									
+									<ion-button  class="actionButton" fill="outline">{{'LANDINGPAGE.Icon3SubTitle' | translate}}
+									</ion-button>
 								</div>
+							</div>
+							<div>
+								<p class="ion-text-justify">{{'LANDINGPAGE.Icon3SubText' | translate}}</p>
+							</div>
+						</a>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		</div>
+		<div class="iconsRowWrapper">
+			<ion-grid class="iconsRow" id="content1">
+				<ion-row>
+					<ion-col  >
+						<ion-card>
+							<ion-card-content>
+								<ion-icon name="lock-closed-outline"></ion-icon>
+								<h2>{{'LANDINGPAGE.Icon1Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.Icon1Text' | translate}}</p>
+							</ion-card-content>
+						</ion-card>
 
-							</ion-col>
-							<ion-col>
-								<div class="parent">
-									<div class="child sub2" >
-										<div class="child sub2"   [routerLink]="['/tools']">
-											<ion-button class="actionButton" fill="outline">{{'LANDINGPAGE.Icon2SubTitle' | translate}}
-											</ion-button>
-										</div>
+					</ion-col>
+					<ion-col  >
 
-									</div>
-								</div>
-								<div>
-									<p class="ion-text-justify">{{'LANDINGPAGE.Icon2SubText' | translate}}</p>
-								</div>
-							</ion-col>
-							<ion-col >								
-								<a href="https://www.facebook.com/entrepreneurstudiocom" target="_blank">
-									<div class="parent">
-										<div class="child sub3" >									
-											<ion-button  class="actionButton" fill="outline">{{'LANDINGPAGE.Icon3SubTitle' | translate}}
-											</ion-button>
-										</div>
-									</div>
-									<div>
-										<p class="ion-text-justify">{{'LANDINGPAGE.Icon3SubText' | translate}}</p>
-									</div>
-								</a>
-							</ion-col>
-						</ion-row>
-					</ion-grid>
-				</div>
-				<ion-grid class="iconsRow" id="content1">
-					<ion-row>
-						<ion-col>
-							<ion-icon name="lock-closed-outline"></ion-icon>
-							<h2>{{'LANDINGPAGE.Icon1Title' | translate}}</h2>
-							<p>{{'LANDINGPAGE.Icon1Text' | translate}}</p>
-						</ion-col>
-						<ion-col>
-							<ion-icon name="cloud-outline"></ion-icon>
-							<h2>{{'LANDINGPAGE.Icon2Title' | translate}}</h2>
-							<p>{{'LANDINGPAGE.Icon2Text' | translate}}</p>
-						</ion-col>
-						<ion-col>
-							<ion-icon name="people-outline"></ion-icon>
-							<h2>{{'LANDINGPAGE.Icon3Title' | translate}}</h2>
-							<p>{{'LANDINGPAGE.Icon3Text' | translate}}</p>
-						</ion-col>
-						<ion-col>
-							<ion-icon name="phone-portrait-outline"></ion-icon>
-							<h2>{{'LANDINGPAGE.Icon4Title' | translate}}</h2>
-							<p>{{'LANDINGPAGE.Icon4Text' | translate}}</p>
-						</ion-col>
-						<ion-col>
-							<ion-icon name="construct-outline"></ion-icon>
-							<h2>{{'LANDINGPAGE.Icon5Title' | translate}}</h2>
-							<p>{{'LANDINGPAGE.Icon5Text' | translate}}</p>
-						</ion-col>
-					</ion-row>
-				</ion-grid>
-				<div class="ion-text-center bigMargin">
-					<ion-button size="large" color="primary" class=""  (click)="presentSignUpPopover()">{{'LANDINGPAGE.StartNow' | translate}}</ion-button>
-				</div>
-				<div class="subContent" >
-					<h1 class="ion-padding ion-text-center subContentTitle " >{{'LANDINGPAGE.Content2Title' | translate}}</h1>
-					<ion-grid class="pictureAndText"  >
-						<ion-row>
-							<ion-col>
-								<img src="assets/images/undraw_profile_6l1l.svg">
-							</ion-col>
-							<ion-col  class="ion-padding">
-								<h2>{{'LANDINGPAGE.pictureAndText1Title' | translate}}</h2>
-								<p>{{'LANDINGPAGE.pictureAndText1Text' | translate}}</p>
-							</ion-col>
-						</ion-row>
-					</ion-grid>
-					<ion-grid class="pictureAndText" id="content2">
-						<ion-row>
-							<ion-col class="ion-padding">
-								<h2>{{'LANDINGPAGE.pictureAndText2Title' | translate}}</h2>
-								<p>{{'LANDINGPAGE.pictureAndText2Text' | translate}}</p>
-							</ion-col>
-							<ion-col>
-								<img src="assets/images/undraw_our_solution_htvp.svg">
-							</ion-col>
-						</ion-row>
-					</ion-grid>
-					<ion-grid class="pictureAndText">
-						<ion-row>
-							<ion-col>
-								<img src="assets/images/undraw_real_time_collaboration_c62i.svg">
-							</ion-col>
-							<ion-col  class="ion-padding">
-								<h2>{{'LANDINGPAGE.pictureAndText3Title' | translate}}</h2>
-								<p>{{'LANDINGPAGE.pictureAndText3Text' | translate}}</p>
-							</ion-col>
-						</ion-row>
-					</ion-grid>
-					<ion-grid class="pictureAndText" >
-						<ion-row>
-							<ion-col  class="ion-padding">
-								<h2>{{'LANDINGPAGE.pictureAndText4Title' | translate}}</h2>
-								<p>{{'LANDINGPAGE.pictureAndText4Text' | translate}}</p>
-							</ion-col>
-							<ion-col>
-								<img src="assets/images/undraw_upgrade_06a0.svg">
-							</ion-col>
-						</ion-row>
-					</ion-grid>
+						<ion-card>
+							<ion-card-content>
+								<ion-icon name="cloud-outline"></ion-icon>
+								<h2>{{'LANDINGPAGE.Icon2Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.Icon2Text' | translate}}</p>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
+					<ion-col  >
+						<ion-card>
+							<ion-card-content>
+								<ion-icon name="people-outline"></ion-icon>
+								<h2>{{'LANDINGPAGE.Icon3Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.Icon3Text' | translate}}</p>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
+					<ion-col >
+						<ion-card>
+							<ion-card-content>
+								<ion-icon name="phone-portrait-outline"></ion-icon>
+								<h2>{{'LANDINGPAGE.Icon4Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.Icon4Text' | translate}}</p>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
+					<ion-col >
+						<ion-card>
+							<ion-card-content>
+								<ion-icon name="construct-outline"></ion-icon>
+								<h2>{{'LANDINGPAGE.Icon5Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.Icon5Text' | translate}}</p>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+			<div class="ion-text-center">
+				<ion-button size="large" color="light" fill="outline" class=""  (click)="presentSignUpPopover()">{{'LANDINGPAGE.StartNow' | translate}}</ion-button>
+			</div>
+		</div>
+		
+		<div class="subContent greyBackground"  id="content2">
+			<h1 class="ion-padding ion-text-center subContentTitle " >{{'LANDINGPAGE.Content2Title' | translate}}</h1>
+			<ion-grid class="pictureAndText"  >
+				<ion-row>
+					<ion-col>
+						<img src="assets/images/undraw_profile_6l1l.svg">
+					</ion-col>
+					<ion-col  class="ion-padding">
+						<h2>{{'LANDINGPAGE.pictureAndText1Title' | translate}}</h2>
+						<p>{{'LANDINGPAGE.pictureAndText1Text' | translate}}</p>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+			<ion-grid class="pictureAndText">
+				<ion-row>
+					<ion-col class="ion-padding">
+						<h2>{{'LANDINGPAGE.pictureAndText2Title' | translate}}</h2>
+						<p>{{'LANDINGPAGE.pictureAndText2Text' | translate}}</p>
+					</ion-col>
+					<ion-col>
+						<img src="assets/images/undraw_our_solution_htvp.svg">
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+			<ion-grid class="pictureAndText">
+				<ion-row>
+					<ion-col>
+						<img src="assets/images/undraw_real_time_collaboration_c62i.svg">
+					</ion-col>
+					<ion-col  class="ion-padding">
+						<h2>{{'LANDINGPAGE.pictureAndText3Title' | translate}}</h2>
+						<p>{{'LANDINGPAGE.pictureAndText3Text' | translate}}</p>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+			<ion-grid class="pictureAndText" >
+				<ion-row>
+					<ion-col  class="ion-padding">
+						<h2>{{'LANDINGPAGE.pictureAndText4Title' | translate}}</h2>
+						<p>{{'LANDINGPAGE.pictureAndText4Text' | translate}}</p>
+					</ion-col>
+					<ion-col>
+						<img src="assets/images/undraw_upgrade_06a0.svg">
+					</ion-col>
+				</ion-row>
+			</ion-grid>
 
-				</div>
-				<div class="bottomSection ion-text-center ion-padding" >
-					<a target="blank" href=" https://www.instagram.com/entrepreneur.studio" class="socialNetworkIcon ion-margin">
-						<ion-icon name="logo-instagram"></ion-icon>
-					</a>
-					<a target="blank" href="https://www.linkedin.com/company/entrepreneur-studio" class="socialNetworkIcon ion-margin">
-						<ion-icon name="logo-linkedin"></ion-icon>
-					</a>
-					<a target="blank" href="https://www.facebook.com/entrepreneurstudiocom" class="socialNetworkIcon ion-margin">
-						<ion-icon name="logo-facebook"></ion-icon>
-					</a>
+		</div>
 
-					<a href="mailto:contact@entrepreneur-studio.com"><h2>{{'LANDINGPAGE.contactUs' | translate}}</h2></a>
-					<a [routerLink]="['/cgu']"><h2>{{'LANDINGPAGE.CGU' | translate}}</h2></a>
 
-				</div> 		
-			</ion-card-content>
-		</ion-card>
 	</div>
 
+	<ion-footer translucent="true">
+		<div class="bottomSection ion-text-center ion-padding" >
+			<a target="blank" href=" https://www.instagram.com/entrepreneur.studio" class="socialNetworkIcon ion-margin">
+				<ion-icon name="logo-instagram"></ion-icon>
+			</a>
+			<a target="blank" href="https://www.linkedin.com/company/entrepreneur-studio" class="socialNetworkIcon ion-margin">
+				<ion-icon name="logo-linkedin"></ion-icon>
+			</a>
+			<a target="blank" href="https://www.facebook.com/entrepreneurstudiocom" class="socialNetworkIcon ion-margin">
+				<ion-icon name="logo-facebook"></ion-icon>
+			</a>
 
-</ion-content>
+			<a href="mailto:contact@entrepreneur-studio.com"><h2>{{'LANDINGPAGE.contactUs' | translate}}</h2></a>
+			<a [routerLink]="['/cgu']"><h2>{{'LANDINGPAGE.CGU' | translate}}</h2></a>
+
+		</div> 		
+
+	</ion-footer>
