--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -86,7 +86,7 @@ span:after {
 		img{
 			position:relative;
 			bottom:30px;
-			width:100%;
+			width:auto;
 		}
 		.head{
 			padding-left: 400px;
@@ -95,6 +95,11 @@ span:after {
 		}
 	}
 	@media(max-width: 800px) {
+		ion-grid{
+			background:#0000004d;
+			padding:0px;
+			color:var(--ion-color-primary-contrast)
+		}
 		height: auto;
 		padding-top: 0px;
 		h1{
@@ -105,15 +110,37 @@ span:after {
 			min-width: 100%;
 
 		}
+		.freeAccess{
+			color:var(--ion-color-primary-contrast)
+
+		}
 		
 		img{
 			position:relative;
 			bottom:-68px;
-			width:100%;
+			width:auto;
+			min-width: auto;
 		}
-		
+	}
+	@media(max-width: 500px) {
+		ion-grid{
+			background:#0000004d;
+			padding:0px;
+			color:var(--ion-color-primary-contrast)
+		}
+		.head{
+			padding:20px;
+			text-align: center;
+		}
+		.freeAccess{
+			color:var(--ion-color-primary-contrast)
+
+		}
 	}
 	
+}
+.headerTitle{
+	margin:50px;
 }
 .freeAccess{
 	font-style: italic;
@@ -126,8 +153,26 @@ span:after {
 		color: var(--ion-color-dark);
 	}
 }
+.underline{
+	margin-left: 5px;
+	font-weight: bold;
+	margin-right: 5px;
+	background-repeat: no-repeat;
+	background-size: 100% 0.2em;
+	background-position: 0 88%;
+	transition: background-size 0.25s ease-in;
+	background-image: linear-gradient(to right, var(--ion-color-secondary) 0%, var(--ion-color-secondary));
 
+	color: var(--ion-color-dark);
+}
 .subContentTitle{
+	span{
+		display: inline-flex;
+	}
+	.underline{
+		font-size:1.4em;
+
+	}
 	text-align: center;
 	max-width: 1000px;
 	margin-left: auto;
@@ -135,7 +180,7 @@ span:after {
 	font-size:2em;
 	@media(max-width: 800px) {
 		margin-top:16px;
-		text-align: justify!important;
+		text-align: center!important;
 		font-size:1.5em;
 	}
 
@@ -145,6 +190,7 @@ span:after {
 	margin-left: 	auto;
 	margin-right: 	auto;
 	text-align:center; 	
+	
 }
 .timelinePicture{
 	width:100%;
@@ -167,30 +213,48 @@ span:after {
 
 }
 
-
+.iconsRowWrapper{
+	background-repeat: no-repeat;
+    background-size: 100% 15em;
+    background-position: 0 100%;
+    transition: background-size 0.25s ease-in;
+    background-image: linear-gradient(to right, var(--ion-color-primary-tint) 0%, var(--ion-color-secondary));
+    padding-bottom: 29px;
+}
 .iconsRow{
 	width: 100%;
 	padding-top: 30px;
-	padding-bottom: 30px;
 	text-align: center;
 	margin-top:100px;
-	margin-bottom:100px;
-	background: var(--ion-color-primary);
-	color: var(--ion-color-primary-contrast);
+	text-align:left;
+	color: var(--ion-color-dark);
+	max-width: 	1000px;
 	@media(max-width: 768px) {
 		width: 100%;
 	}
 	h2{
-		font-size:2em;
+		font-size:1.3em;
+		font-weight: bold;
 	}
 	text-align: center;
 	ion-icon{
+		color: var(--ion-color-primary);
+
 		font-size:3em;
 		margin-bottom:0.2em;
 	}
 	ion-col{
-		min-width: 200px;
+		text-align:left;
+		
+		border-radius:4px;
+		ion-card{
+			height: 270px;
+			p{
+				margin-top:20px;
+			}
+		}
 	}
+	
 }
 
 .beta{
@@ -230,6 +294,7 @@ span:after {
 	ion-col{
 		margin-left:30px;
 		margin-right:30px;
+
 		@media(max-width: 800px) {
 			margin-left:0px;
 			margin-right:0px;
@@ -281,6 +346,7 @@ span:after {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
+
 		@media(max-width: 800px) {
 			min-height: 100px;
 			width: 100%;
@@ -348,13 +414,11 @@ span:after {
 }
 .bottomSection{
 	margin-top:30px;
-	background-color: var(--ion-color-dark);
-	position: relative;
-	bottom: -2px;
+	background: var(--ion-color-primary-tint);
 	font-size: 3em;
-	color: var(--ion-color-dark-contrast);
+	color: var(--ion-color-primary-contrast);
 	a{
-		color: var(--ion-color-dark-contrast) !important;
+		color: var(--ion-color-primary-contrast) !important;
 
 	}
 	.socialNetworkIcon{
@@ -364,4 +428,7 @@ span:after {
 }
 
 
+.greyBackground{
+	background: var(--ion-color-light);
 
+}
