--- a/src/app/project/executive/summary/business-canvas-element/business-canvas-element.component.html
+++ b/src/app/project/executive/summary/business-canvas-element/business-canvas-element.component.html
@@ -3,7 +3,7 @@
 	<h1>{{title }} </h1> 
 	<div >
 		<div *ngFor="let item of elementData"  > 
-			<ion-badge color="primary" tooltip="Tooltip" *ngIf="item.id  !== editedItemId && accessRights.write ===true" class="item ion-text-wrap" (click)="edit(item.id)" >{{item.text}}
+			<ion-badge color="primary" *ngIf="item.id  !== editedItemId && accessRights.write ===true" class="item ion-text-wrap" (click)="edit(item.id)" >{{item.text}}
 				
 			</ion-badge>
 			<ion-icon name="pencil-outline" class="editIcon" (click)="openPopover(item)" *ngIf="accessRights.write ===true" > </ion-icon>
