--- a/src/app/project/executive/summary/popover-project-summary/popover-project-summary.component.html
+++ b/src/app/project/executive/summary/popover-project-summary/popover-project-summary.component.html
@@ -13,21 +13,70 @@
 		</ion-item>
 		<ion-item >
 
-			<ion-grid>
+			<ion-grid class="logoGrid">
 				<ion-row>
 					<ion-col>
 						<ion-label position="floating"  class="colLabel">{{'PROJECT_SUMMARY.ProjectLogoUrl' | translate }}</ion-label>
 					</ion-col>
 					<ion-col>
-						<img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end" />
-						<ion-icon slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''"></ion-icon>
+						<label for="files">
+							<div class="parent">
+								<img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end" />
+								<div class="child">
+									<div>
+										<ion-icon size="large "color="light" name="images-outline"></ion-icon>
+									</div>
+									<ion-text color="light">{{'PROJECT_SUMMARY.ChooseLogoSubTitle' | translate}}</ion-text>
+								</div>
+							</div>
+						</label>
+
 						<input type="file" ng2FileSelect [uploader]="uploader"  (onFileSelected)=	"uploadFile()"  id="files" class="ion-hide"/>
-						<ion-button color="primary"><label for="files">{{'PROJECT_SUMMARY.ChooseLogo' | translate}}</label></ion-button>
+						<div class="uploadFileWrap ion-padding"  *ngIf="!(project.summary.logoUrl !=='')"  >
+							<label for="files">
+								<div>
+									<ion-icon size="large "color="medium" name="images-outline"></ion-icon>
+								</div>
+								<ion-text color="medium">{{'PROJECT_SUMMARY.ChooseLogoSubTitle' | translate}}</ion-text>
+								<div class="ion-margin-top">
+									<ion-button color="light" size="small"><label for="files" class="ion-text-wrap">{{'PROJECT_SUMMARY.ChooseLogButton' | translate}}</label></ion-button>
+								</div>
+							</label>
+						</div>
+						<div>
+							<ion-button color="primary" size="small" *ngIf="project.summary.logoUrl !==''"><label for="files">{{'PROJECT_SUMMARY.ChooseLogButtonOther' | translate}}</label></ion-button>
+						</div>
 					</ion-col>
 				</ion-row>
 			</ion-grid>	
 			
 
+		</ion-item>
+		<ion-item >
+			<ion-row>
+				<ion-col>
+					<ion-label position="floating"  class="colLabel">{{'PROJECT_SUMMARY.Background' | translate}} <span class="copyright">({{'PROJECT_SUMMARY.UnsplashPictures' | translate}}<a href="https://unsplash.com/" target="_blank">{{'PROJECT_SUMMARY.UnsplashLink' | translate}}</a>)</span></ion-label>
+				</ion-col>
+			</ion-row>
+			<ion-row>
+				<ion-col>
+					<ion-grid class="backgroundPictures">
+						<ion-row>
+							<ion-col>
+								
+
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col *ngFor="let backgroundPicture of backgroundPictures" >
+								<ion-thumbnail [ngClass]="{'selectedPicture' : backgroundPicture.id === project.theme.backgroundPictureId}">
+									<img [src]="backgroundPicture.urls.thumb" (click)="selectBackgroundPicture(backgroundPicture)"/>
+								</ion-thumbnail>
+							</ion-col>
+						</ion-row>
+					</ion-grid>	
+				</ion-col>
+			</ion-row>		
 		</ion-item>
 
 
@@ -45,6 +94,30 @@
 			[useIonInput]="true"
 			></ion-auto-complete>
 		</ion-item>
+		<ion-item lines="none">
+			<ion-label color="primary" position="stacked">{{'PROJECT_SUMMARY.SharingStatus'  | translate}}</ion-label>
+		</ion-item>
+		<ion-item>
+			<ion-segment (ionChange)="segmentChanged($event)" [value]="project.sharingStatus">
+				<ion-segment-button value="private">
+					<ion-icon  name="lock-closed-outline"></ion-icon>
+					<ion-label >{{'PROJECT.Private'  | translate}}  
+						<div class="subLabel ion-text-wrap">{{'PROJECT.PrivateSubLabel' | translate}}</div>
+
+					</ion-label>
+
+				</ion-segment-button>
+				<ion-segment-button value="public" >
+					<ion-icon  name="globe-outline" ></ion-icon>
+					<ion-label >{{'PROJECT.Public'  | translate}}  
+						<div class="subLabel ion-text-wrap">
+							{{'PROJECT.PublicSubLabel' | translate}}
+						</div>
+					</ion-label>
+				</ion-segment-button>
+			</ion-segment>
+		</ion-item>
 	</ion-list>
+
 	<ion-button color="primary" expand="full" (click)="save()">{{'PROJECT_SUMMARY.ProjectSave' | translate }}</ion-button>
 </ion-content>
