--- a/src/app/project/executive/summary/popover-project-summary/popover-project-summary.component.scss
+++ b/src/app/project/executive/summary/popover-project-summary/popover-project-summary.component.scss
@@ -1,6 +1,75 @@
+.child{
+	display:none;
+	transition: border 0.3s ease-in-out;
+	transition-duration: 0.15s;
+	width:100%;
+	height:auto;
+	text-align:center;
+	cursor: pointer;
+}
 .logo{
 	max-height:200px;
+	cursor: pointer;
+
+}
+.parent:hover{
+	.child{
+		display: block;
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		width: 100%;
+		height: 100%;
+		background: rgba(0, 0, 0, 0.54);
+		cursor: pointer;
+		padding:30px;
+
+	}
 }
 .pointer{
 	cursor: pointer;
+}
+.logoGrid{
+	width: 	100%;
+}
+.uploadFileWrap{
+	border: 2px dashed var(--ion-color-medium);
+	transition: border 0.3s ease-in-out;
+	transition-duration: 0.15s;
+	width:100%;
+	height:auto;
+	text-align:center;
+	cursor: pointer;
+}
+
+.noPicture{
+	--background:var(--ion-color-light);
+	color:var(--ion-color-light-contrast);
+	border-radius:4px;
+	width:100%;
+	border:1px dashed  	var(--ion-color-medium);
+	height:100px;
+	label{
+	}
+}
+ion-thumbnail{
+	cursor: pointer;
+}
+.selectedPicture{
+	border:3px solid var(--ion-color-primary);
+}
+.backgroundPictures{
+	max-width:280px;
+}
+.copyright{
+	font-size:smaller;
+}
+.subLabel{
+	font-size: x-small;
+	text-transform: initial;
+}
+
+ion-segment-button.md{
+	--background-checked: var(--ion-color-primary)!important;
+	--color-checked: var(--ion-color-primary-contrast);
 }
