--- a/src/app/project/executive/summary/summary.page.scss
+++ b/src/app/project/executive/summary/summary.page.scss
@@ -1,3 +1,37 @@
+ion-content.customStyle{
+	background-color:var(--ion-color-primary-contrast);
+	background-repeat:no-repeat;
+	background-size: cover;
+
+	ion-card{
+		background:#0000002e;
+	}
+	h2{
+		color:var(--ion-color-primary-contrast);
+	}
+	ion-list{
+		background:#0000002e;
+	}
+	ion-item{
+		--background:transparent;
+		color:var(--ion-color-primary-contrast);
+	}
+	.input{
+		--background: var(--ion-color-light);
+		color: var(--ion-color-light-contrast);
+		--border-radius	: 5px;
+		width: 100%;
+		--inner-border-width:0px!important;
+		--border-width:0px!important;
+	}
+	.iconColor{
+		color: var(--ion-color-primary-contrast);
+
+	}
+}
+
+
+
 @media(max-width: 800px) {
 	ion-card{
 		margin-left: 	0px;
@@ -11,7 +45,10 @@
 		padding-left: 0px;
 		padding-right: 0px;
 		padding-top: 20px;
-		padding-bottom: 0px;		
+		padding-bottom: 0px;
+		ion-textarea, ion-input, ion-text{
+			font-size: smaller;
+		}		
 	}
 }
 .cell{
@@ -97,7 +134,7 @@
 		padding: 10px;
 		ion-icon{
 			cursor:pointer;
-			font-size:25px;
+			font-size:20px;
 		}
 
 	}
