--- a/src/app/project/executive/timeline/time-element/time-element.component.scss
+++ b/src/app/project/executive/timeline/time-element/time-element.component.scss
@@ -54,6 +54,7 @@
 .selected{
 	color: var(--ion-color-primary-contrast);
 	background-color: var(--ion-color-primary);
+	--background: var(--ion-color-primary);
 	font-weight: bold;
 	.icon{
 		text-align: center;
@@ -72,5 +73,9 @@
 	}
 }
 .mainElement{
+	cursor: pointer;
 	
+}
+.timelineElement:hover{
+	background-color: #3880ff14;
 }
