--- a/src/app/tools/tools.page.scss
+++ b/src/app/tools/tools.page.scss
@@ -86,7 +86,24 @@ ion-searchbar{
 		overflow: 	auto;
 	}
 }
+.toolsNumber{
+	padding: 12px;
+	color: var(--ion-color-dark);
 
+	span{
+		padding-left: 5px;
+		font-weight: bold;
+		padding-right: 5px;
+		background-repeat: no-repeat;
+		background-size: 100% 0.2em;
+		background-position: 0 88%;
+		font-size:1.4em;
+		transition: background-size 0.25s ease-in;
+		background-image: linear-gradient(to right, var(--ion-color-secondary) 0%, var(--ion-color-secondary));
+
+		color: var(--ion-color-dark);
+	}
+}
 .gridTools{
 	margin-left: auto;
 	margin-right: auto;
